style.css
/* ... */
  /* .title:hover {
    color: rgb(216, 214, 75);
     
    
  } */
  

  /* .subtitle {
    font-size: 1vw;
    margin: 0 auto 2% auto;
    text-align: center;
    text-transform: uppercase;
    color: rgb(202, 162, 77);
    
  } */
.podDescription {
  font-size: 1.5vw;
  /* color: rgb(204, 125, 149); */
  color: rgb(202, 162, 77);
  margin: 15% auto;
    text-align: center;
    font-family: acier-bat-solid, sans-serif;
}

  .contact {
    font-size: 2vw;
    color: rgb(204, 125, 149);
    /* color: rgb(202, 162, 77); */
    /* margin: 35% 10% 20% 10%; */
    margin: 15% auto;
    text-align: center;
    font-family: acier-bat-solid, sans-serif;
  }

  .contactEmail {
    margin: 0 3% 0 0;
  }



 
  .topA {
      margin: 7% auto;
      padding: 10% 3%;
      font-size: 1.7vw;
      color: rgb(65, 150, 172);

      /* background-color: red; */
  }
  .topB {
      margin: 7% auto;
      /* padding: 10% 3%; */
      font-size: 1vw;
      color: rgb(202, 162, 77);

      /* background-color: red; */
  }




  .gttImage {
    width: 100%;
    /* height: 33%; */
    /* margin: 0 auto; */
    box-shadow: 10px 10px 30px #00000055;
    z-index: 4;
  }

  .rowOne {
    
    /* background-image: url(assets/GTT_webBG-small.jpg);
    background-position: center center;
    height: 100vh; */
    
  }

  .rowOneHalf {
    
    /* background-color:rgb(18, 45, 75); */
   
    /* background-image: linear-gradient(to right, rgb(197, 197, 186),rgb(241, 241, 241), rgb(189, 189, 189)); */
    /* box-shadow: 0px 3px 40px #00000055; */
    
    /* height: 50vh; */
  }


  .buzzPlayer {
    margin: 10% auto;
  }



  .linkCity {
    /* text-align: center;
    align-content: center;
    margin: 2% auto;
    width: 20%; */
  }
  .topLogos {
    text-align: center;
    align-content: center;
    margin: 2% auto;
    width: 80%;

  }

  .topLinks {
    /* text-align: center;
    align-content: center;
    margin: 2% auto;
    width: 2%; */
  }




  .rowTwo {
    
    /* background-image: linear-gradient(to bottom right, rgb(189, 189, 189), rgb(207, 207, 207), rgb(226, 226, 226),
    rgb(240, 240, 240));
    
    box-shadow: 0px 3px 40px #00000055; */
    
  }

  .enneagramLinkDiv {
    margin: 15% auto;
    align-content: center;
    text-align: center;
    
  }
  .enneagramHref {
    font-size: 2vw;
    text-decoration: none;
    color: rgb(202, 162, 77);
    
  }
  .enneagramHref:hover {
    font-size: 2vw;
    text-decoration: none;
    color: rgb(243, 209, 134);
    /* font-weight: bold; */
  }
  .enneaLinkText {
    padding: 5%;
    border-radius: 25px;
    border-style: double;
    text-decoration: none;
    margin: 20%;
  }





  .letsTalk {
    font-size: 5vw;
    margin: 3% auto;
    text-align: center;
    font-family: acier-bat-outline, sans-serif;
    color: rgb(240, 232, 215);
    letter-spacing: 5vw
  }
  
  .podcaster1 {
    width: 90%;
    /* margin: 10%; */
    box-shadow: 10px 10px 30px #00000055;
    margin: 10% auto;
    align-content: center;
    text-align: center;

  }
  .podcaster2 {
    width: 100%;
    /* margin: 10%; */
    box-shadow: 10px 10px 30px #00000055;
    /* margin: 0 auto; */
    align-content: center;
    text-align: center;

  }

  .podcasterTextTitle {
    /* margin: 7% auto; */
      /* padding: 10% 3%; */
      margin: 2% 10% 2% 10%;
      font-size: 2vw;
      /* color: rgb(65, 150, 172); */
      color: rgb(151, 151, 151);
      font-family: acier-bat-solid, sans-serif;

  }
  .podcasterText {
    margin: 2% 10% 20% 10%;
    /* color: rgb(65, 150, 172); */
    color: rgb(77, 77, 77);
    font-size: 1vw;
    font-family: sans-serif;
    font-style: italic;
  }


  .footer {
    height: 35%;
    background-color: rgba(31, 31, 31, 0.404);
    align-content: center;
    text-align: center;
  
  }

  .footerLinks {
    align-content: center;
    text-align: center;
    /* width: 10%;
    margin: 2% auto; */
  }
  .footerLinksHref {
    align-content: center;
    text-align: center;
  }

  .linkLogos {
    width: 5%;
    align-content: center;
    text-align: center;
    margin: 5% 2% 5% 2%;
  }
  
  .copyright {
    font-size: 1vw;
    text-align: center;
    margin: 3% auto;
    color: rgb(231, 231, 231);
  }


/* ========================{ ENNEAGRAM PAGE }======================================= */


.enneagramSubtitleText {
  font-size: 2vw;
  color: rgb(224, 235, 78);
  /* margin: 35% 10% 20% 10%; */
  margin: 30% auto 5% auto;
  text-align: center;

  font-family: acier-bat-solid, sans-serif;
  font-weight: 400;
  font-style: normal;
  text-decoration: none;
}
.enneagramSubtitleText:hover {
  
  color: rgb(244, 252, 132);
  /* margin: 35% 10% 20% 10%; */
  
  text-decoration: none;
}

.enneagramTitleText2 {
  font-size: 8vw;
  color: rgb(228, 236, 109);
  letter-spacing: 10px;
  margin: -1.5% auto 20% auto; 
  /* margin: auto; */
  align-content: center;
  text-align: center;

  font-family: acier-bat-outline, sans-serif;
  font-weight: 400;
  font-style: normal;
  text-shadow: -10px 20px 30px #2a3f49de;
}

.enneagramImageDiv {
  align-content: center;
  text-align: center;
  

}
.enneagramImage {
  align-content: center;
  text-align: center;
  border-radius: 25px;
  width: 90%;
  margin: 3% auto 1% auto;

}

.enneagramTestText {
  align-content: center;
  text-align: center;
  margin: 3% auto 10% auto;
  padding: 5%;
  border-radius: 25px;
  border-style: double;
  text-decoration: none;
  font-size: 1vw;
  color: rgb(202, 162, 77)
  /* transition: padding .3s; */
  /* transition: font-size .3s; */

}
.enneagramTestText:hover {
  /* padding: 5.5%; */
  /* font-size: 1.1vw; */
  /* font-weight: bold; */
  color: rgb(238, 194, 99)
}

.enneaSpan {
  font-weight: bold;
}

.enneagramTestLink {
  align-content: center;
  text-align: center;
  text-decoration: none;
  color: rgb(202, 162, 77)
}
.enneagramTestLink:hover {
  align-content: center;
  text-align: center;
  text-decoration: none;
  color: rgb(202, 162, 77);
  font-size: 1.2vw;
}
/* ... */

